--- a/main.ipynb
+++ b/main.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Part 2 | Multiclassification Neural Networks | INFOTC 3040 | Max Warren"
+    "GTSRB Multiclassification Neural Network | Max Warren"
    ]
   },
   {
